# DockerSandbox

./: .gitignore  DockerGUI.spec  README.md  docker_manager.py  main.py  pyproject.toml
.github/workflows/: build.yml
assets/: generate_logo.py
docker_gui/: __init__.py  ansi_parser.py  container_card.py  create_dialog.py  docker_client.py  logger.py  main_window.py  pty_session.py  terminal_display.py  terminal_tab.py  theme.py
